--- a/package.json
+++ b/package.json
@@ -1,20 +1,64 @@
 {
-  "name": "nextj-dato-boiler",
+  "name": "nextjs13-dato-boiler",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "npm run dev:watch",
+    "dev:watch": "LOG_GRAPHQL=true next dev & graphql-codegen --watch",
+    "dev:turbo": "LOG_GRAPHQL=true next dev --turbo & graphql-codegen --watch",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.1",
+    "@datocms/cma-client": "1.1.8",
+    "@datocms/cma-client-browser": "^1.1.5",
+    "@datocms/cma-client-node": "^1.1.5",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.3",
+    "@next/bundle-analyzer": "^12.3.1",
+    "@svgr/webpack": "^6.4.0",
+    "@types/node": "^18.11.3",
+    "classnames": "^2.3.2",
+    "dato-nextjs-utils": "github:bebejane/dato-nextjs-utils",
+    "datocms-structured-text-utils": "^2.0.4",
+    "framer-motion": "^7.5.3",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
+    "hamburger-react": "^2.5.0",
+    "markdown-truncate": "^1.0.4",
     "next": "13.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next-compose-plugins": "^2.2.1",
+    "next-seo": "^5.8.0",
+    "next-sitemap": "^3.1.24",
+    "nextjs-google-analytics": "^2.1.0",
+    "react": "^18.2.0",
+    "react-datocms": "^3.1.3",
+    "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.3",
+    "remark-breaks": "^3.0.2",
+    "remark-gfm": "^3.0.1",
+    "rooks": "^7.4.0",
+    "sass": "^1.55.0",
+    "swiper": "^8.4.3",
+    "zustand": "^4.1.2"
   },
   "devDependencies": {
-    "eslint": "8.26.0",
-    "eslint-config-next": "13.0.0"
+    "@graphql-codegen/cli": "^2.13.6",
+    "@graphql-codegen/import-types-preset": "^2.2.3",
+    "@graphql-codegen/introspection": "^2.2.1",
+    "@graphql-codegen/typed-document-node": "^2.3.5",
+    "@graphql-codegen/typescript": "^2.7.3",
+    "@graphql-codegen/typescript-document-nodes": "^2.3.3",
+    "@graphql-codegen/typescript-graphql-files-modules": "^2.2.1",
+    "@graphql-codegen/typescript-operations": "^2.5.3",
+    "@graphql-codegen/typescript-resolvers": "^2.7.3",
+    "@types/graphql": "^14.5.0",
+    "@types/node": "18.11.5",
+    "@types/react": "18.0.23",
+    "eslint": "^8.25.0",
+    "eslint-config-next": "13.0.0",
+    "typescript": "^4.8.4",
+    "watch": "^1.0.2"
   }
 }
