--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@datocms/cma-client-node": "^1.1.5",
     "@graphql-codegen/typescript-react-apollo": "^3.3.3",
     "@next/bundle-analyzer": "^12.3.1",
+    "@next/env": "^13.0.0",
     "@svgr/webpack": "^6.4.0",
     "@types/node": "^18.11.3",
     "classnames": "^2.3.2",
@@ -27,7 +28,7 @@
     "graphql-tag": "^2.12.6",
     "hamburger-react": "^2.5.0",
     "markdown-truncate": "^1.0.4",
-    "next": "13.0.0",
+    "next": "13.0.1-canary.0",
     "next-compose-plugins": "^2.2.1",
     "next-seo": "^5.8.0",
     "next-sitemap": "^3.1.24",
