--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "graphql-tag": "^2.12.6",
     "hamburger-react": "^2.5.0",
     "markdown-truncate": "^1.0.4",
-    "next": "13.0.1-canary.0",
+    "next": "13.0.1",
     "next-compose-plugins": "^2.2.1",
     "next-seo": "^5.8.0",
     "next-sitemap": "^3.1.24",
