--- a/package.json
+++ b/package.json
@@ -1,65 +1,65 @@
 {
-  "name": "nextjs13-dato-boiler",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "npm run dev:watch",
-    "dev:watch": "LOG_GRAPHQL=true next dev & graphql-codegen --watch",
-    "dev:turbo": "LOG_GRAPHQL=true next dev --turbo & graphql-codegen --watch",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@apollo/client": "^3.7.1",
-    "@datocms/cma-client": "1.1.8",
-    "@datocms/cma-client-browser": "^1.1.5",
-    "@datocms/cma-client-node": "^1.1.5",
-    "@graphql-codegen/typescript-react-apollo": "^3.3.3",
-    "@next/bundle-analyzer": "^12.3.1",
-    "@next/env": "^13.0.0",
-    "@svgr/webpack": "^6.4.0",
-    "@types/node": "^18.11.3",
-    "classnames": "^2.3.2",
-    "dato-nextjs-utils": "github:bebejane/dato-nextjs-utils",
-    "datocms-structured-text-utils": "^2.0.4",
-    "framer-motion": "^7.5.3",
-    "graphql": "^16.6.0",
-    "graphql-tag": "^2.12.6",
-    "hamburger-react": "^2.5.0",
-    "markdown-truncate": "^1.0.4",
-    "next": "13.0.1",
-    "next-compose-plugins": "^2.2.1",
-    "next-seo": "^5.8.0",
-    "next-sitemap": "^3.1.24",
-    "nextjs-google-analytics": "^2.1.0",
-    "react": "^18.2.0",
-    "react-datocms": "^3.1.3",
-    "react-dom": "^18.2.0",
-    "react-markdown": "^8.0.3",
-    "remark-breaks": "^3.0.2",
-    "remark-gfm": "^3.0.1",
-    "rooks": "^7.4.0",
-    "sass": "^1.55.0",
-    "swiper": "^8.4.3",
-    "zustand": "^4.1.2"
-  },
-  "devDependencies": {
-    "@graphql-codegen/cli": "^2.13.6",
-    "@graphql-codegen/import-types-preset": "^2.2.3",
-    "@graphql-codegen/introspection": "^2.2.1",
-    "@graphql-codegen/typed-document-node": "^2.3.5",
-    "@graphql-codegen/typescript": "^2.7.3",
-    "@graphql-codegen/typescript-document-nodes": "^2.3.3",
-    "@graphql-codegen/typescript-graphql-files-modules": "^2.2.1",
-    "@graphql-codegen/typescript-operations": "^2.5.3",
-    "@graphql-codegen/typescript-resolvers": "^2.7.3",
-    "@types/graphql": "^14.5.0",
-    "@types/node": "18.11.5",
-    "@types/react": "18.0.23",
-    "eslint": "^8.25.0",
-    "eslint-config-next": "13.0.0",
-    "typescript": "^4.8.4",
-    "watch": "^1.0.2"
-  }
+	"name": "nextjs13-dato-boiler",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "npm run dev:watch",
+		"dev:watch": "next dev & npm run barrel:watch & npm run codegen",
+		"build": "next build && npm run postbuild",
+		"codegen": "graphql-codegen --watch",
+		"start": "next start",
+		"lint": "next lint",
+		"preview": "npm run build && npm run start",
+		"barrel": "node ./lib/scripts/barrel",
+		"barrel:watch": "watch 'node ./lib/scripts/barrel' ./components",
+		"postbuild": "next-sitemap"
+	},
+	"dependencies": {
+		"@datocms/cma-client-browser": "^3.0.1",
+		"@datocms/cma-client-node": "^3.0.2",
+		"@graphql-codegen/typescript-react-apollo": "^3.3.7",
+		"@graphql-typed-document-node/core": "^3.2.0",
+		"@next/env": "^13.5.6",
+		"@types/node": "^20.8.9",
+		"classnames": "^2.3.2",
+		"dato-nextjs-utils": "github:bebejane/dato-nextjs-utils",
+		"datocms-structured-text-utils": "^2.0.4",
+		"graphql": "^16.6.0",
+		"graphql-tag": "^2.12.6",
+		"markdown-truncate": "^1.1.0",
+		"next": "^14.0.1",
+		"next-seo": "^5.15.0",
+		"next-sitemap": "^3.1.55",
+		"nextjs-google-analytics": "^2.3.3",
+		"react": "^18.2.0",
+		"react-datocms": "^4.1.3",
+		"react-dom": "^18.2.0",
+		"react-markdown": "^8.0.7",
+		"remark-breaks": "^3.0.3",
+		"remark-gfm": "^3.0.1",
+		"rooks": "^7.14.1",
+		"sass": "^1.69.5",
+		"swiper": "^8.4.7",
+		"zustand": "^4.4.4"
+	},
+	"devDependencies": {
+		"@graphql-codegen/cli": "^5.0.0",
+		"@graphql-codegen/import-types-preset": "^3.0.0",
+		"@graphql-codegen/introspection": "^4.0.0",
+		"@graphql-codegen/typed-document-node": "^5.0.1",
+		"@graphql-codegen/typescript": "^4.0.1",
+		"@graphql-codegen/typescript-document-nodes": "^4.0.1",
+		"@graphql-codegen/typescript-graphql-files-modules": "^3.0.0",
+		"@graphql-codegen/typescript-operations": "^4.0.1",
+		"@graphql-codegen/typescript-resolvers": "^2.7.13",
+		"@parcel/watcher": "^2.3.0",
+		"@types/graphql": "^14.5.0",
+		"@types/react": "^18.2.33",
+		"apollo": "^2.34.0",
+		"eslint": "^8.52.0",
+		"eslint-config-next": "^12.3.4",
+		"graphql-config": "^5.0.3",
+		"typescript": "^4.9.5",
+		"watch": "^1.0.2"
+	}
 }
