--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,16 +8,20 @@
     ],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": false,
-    "forceConsistentCasingInFileNames": true,
+    "strict": true,
     "noEmit": true,
-    "incremental": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "incremental": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
     "baseUrl": ".",
     "paths": {
       "components/*": [
@@ -33,15 +37,7 @@
         "*"
       ]
     },
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ]
   },
-  "typeRoots": [
-    "./@types"
-  ],
   "include": [
     "next-env.d.ts",
     "**/*.ts",
