--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,11 @@
     ],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": true,
+    "strict": false,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
-    "moduleResolution": "bundler",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -22,21 +22,12 @@
         "name": "next"
       }
     ],
-    "baseUrl": ".",
     "paths": {
-      "components/*": [
-        "/components"
-      ],
-      "graphql/*": [
-        "/graphql"
-      ],
-      "lib/*": [
-        "/lib"
-      ],
-      "/*": [
-        "*"
+      "@*": [
+        "./*"
       ]
     },
+    "forceConsistentCasingInFileNames": true
   },
   "include": [
     "next-env.d.ts",
