--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "classnames": "^2.3.2",
     "dato-nextjs-utils": "github:bebejane/dato-nextjs-utils",
     "datocms-structured-text-utils": "^2.0.4",
+    "deep-iterator": "^1.1.0",
     "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
     "markdown-truncate": "^1.1.0",
