--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
       ]
     },
     "forceConsistentCasingInFileNames": true,
-    "strictNullChecks": true
+    "strictNullChecks": false
   },
   "include": [
     "next-env.d.ts",
