--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
 		"start": "next start",
 		"lint": "next lint",
 		"preview": "npm run build && npm run start",
-		"barrel": "node ./lib/scripts/barrel",
-		"barrel:watch": "watch 'node ./lib/scripts/barrel' ./components",
+		"barrel": "barrelsby -E -D -d ./components",
+		"barrel:watch": "chokidar './components/**/*.tsx' -c 'npm run --silent barrel'",
 		"postbuild": "next-sitemap"
 	},
 	"dependencies": {
@@ -38,7 +38,7 @@
 		"rooks": "^7.14.1",
 		"sass": "^1.69.5",
 		"swiper": "^8.4.7",
-		"zustand": "^4.4.4"
+		"zustand": "^4.4.6"
 	},
 	"devDependencies": {
 		"@graphql-codegen/cli": "^5.0.0",
@@ -52,12 +52,12 @@
 		"@graphql-codegen/typescript-resolvers": "^2.7.13",
 		"@parcel/watcher": "^2.3.0",
 		"@types/graphql": "^14.5.0",
-		"@types/node": "^20.8.9",
-		"@types/react": "^18.2.33",
-		"eslint": "^8.52.0",
+		"@types/node": "^20.8.10",
+		"@types/react": "^18.2.34",
+		"barrelsby": "^2.8.1",
+		"chokidar-cli": "^3.0.0",
+		"eslint": "^8.53.0",
 		"eslint-config-next": "^12.3.4",
-		"graphql-config": "^5.0.3",
-		"typescript": "^4.9.5",
-		"watch": "^1.0.2"
+		"graphql-config": "^5.0.3"
 	}
 }
