--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@graphql-typed-document-node/core": "^3.2.0",
 		"@next/env": "^13.5.6",
 		"classnames": "^2.3.2",
+		"date-fns": "^2.30.0",
 		"dato-nextjs-utils": "github:bebejane/dato-nextjs-utils",
 		"datocms-structured-text-utils": "^2.0.4",
 		"deep-iterator": "^1.1.0",
