--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"react": "^18.2.0",
 		"react-datocms": "^4.1.3",
 		"react-dom": "^18.2.0",
+		"react-icons": "^4.11.0",
 		"react-markdown": "^8.0.7",
 		"remark-breaks": "^3.0.3",
 		"remark-gfm": "^3.0.1",
