--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,8 @@
 {
-  "typescript.tsdk": "./node_modules/typescript/lib",
-  "typescript.enablePromptUseWorkspaceTsdk": true,
   "files.exclude": {
     "node_modules": true,
     ".vscode": true,
     ".next": true,
-    "@types": true,
-    "_pages": true
-  },
-  "workspace.isHidden": true
+    "@types": true
+  }
 }
