--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
 		"preview": "npm run build && npm run start",
 		"barrel": "barrelsby -E -D -d ./components",
 		"barrel:watch": "chokidar './components/**/*.tsx' -c 'npm run --silent barrel'",
-		"postbuild": "next-sitemap"
+		"postbuild": "next-sitemap",
+		"reset": "rm -rf .next ; rm -rf node_modules ; rm -f pnpm-lock.yaml ; pnpm i"
 	},
 	"dependencies": {
-		"@datocms/cma-client-browser": "^3.0.1",
-		"@datocms/cma-client-node": "^3.0.2",
+		"@datocms/cma-client-browser": "^3.0.4",
+		"@datocms/cma-client-node": "^3.0.4",
 		"@graphql-typed-document-node/core": "^3.2.0",
 		"@next/env": "^13.5.6",
 		"classnames": "^2.3.2",
@@ -24,9 +25,10 @@
 		"dato-nextjs-utils": "github:bebejane/dato-nextjs-utils",
 		"datocms-structured-text-utils": "^2.0.4",
 		"deep-iterator": "^1.1.0",
+		"dotenv": "^16.3.1",
 		"graphql": "^16.8.1",
 		"markdown-truncate": "^1.1.0",
-		"next": "^14.0.1",
+		"next": "^14.0.2",
 		"next-seo": "^5.15.0",
 		"next-sitemap": "^3.1.55",
 		"nextjs-google-analytics": "^2.3.3",
@@ -53,9 +55,8 @@
 		"@graphql-codegen/typescript-operations": "^4.0.1",
 		"@graphql-codegen/typescript-resolvers": "^2.7.13",
 		"@parcel/watcher": "^2.3.0",
-		"@types/graphql": "^14.5.0",
-		"@types/node": "^20.8.10",
-		"@types/react": "^18.2.34",
+		"@types/node": "^20.9.0",
+		"@types/react": "^18.2.37",
 		"barrelsby": "^2.8.1",
 		"chokidar-cli": "^3.0.0",
 		"eslint": "^8.53.0",
