--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 		"chokidar-cli": "^3.0.0",
 		"eslint": "^8.53.0",
 		"eslint-config-next": "^12.3.4",
-		"graphql-config": "^5.0.3"
+		"graphql-config": "^5.0.3",
+		"tsx": "^4.1.1"
 	}
 }
