--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
   "files.exclude": {
-    "node_modules": true,
-    ".vscode": true,
-    ".next": true,
-    "@types": true
+    "node_modules": false,
+    ".vscode": false,
+    ".next": false,
+    "@types": false
   }
 }
