--- a/package.json
+++ b/package.json
@@ -22,13 +22,13 @@
 		"@next/env": "^13.5.6",
 		"classnames": "^2.3.2",
 		"date-fns": "^2.30.0",
-		"dato-nextjs-utils": "github:bebejane/dato-nextjs-utils",
 		"datocms-structured-text-utils": "^2.0.4",
 		"deep-iterator": "^1.1.0",
 		"dotenv": "^16.3.1",
 		"graphql": "^16.8.1",
 		"markdown-truncate": "^1.1.0",
 		"next": "^14.0.2",
+		"next-dato-utils": "github:bebejane/next-dato-utils",
 		"next-seo": "^5.15.0",
 		"next-sitemap": "^3.1.55",
 		"nextjs-google-analytics": "^2.3.3",
