--- a/package.json
+++ b/package.json
@@ -57,11 +57,13 @@
 		"@parcel/watcher": "^2.3.0",
 		"@types/node": "^20.9.0",
 		"@types/react": "^18.2.37",
+		"@types/react-dom": "^18.2.15",
 		"barrelsby": "^2.8.1",
 		"chokidar-cli": "^3.0.0",
 		"eslint": "^8.53.0",
 		"eslint-config-next": "^12.3.4",
 		"graphql-config": "^5.0.3",
-		"tsx": "^4.1.1"
+		"tsx": "^4.1.1",
+		"typescript": "^5.2.2"
 	}
 }
