--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"barrel": "barrelsby -E -D -d ./components",
 		"barrel:watch": "chokidar './components/**/*.tsx' -c 'npm run --silent barrel'",
 		"postbuild": "next-sitemap",
-		"reset": "rm -rf .next ; rm -rf node_modules ; rm -f pnpm-lock.yaml ; pnpm i"
+		"reset": "rm -rf .next node_modules pnpm-lock.yaml ; pnpm i"
 	},
 	"dependencies": {
 		"@datocms/cma-client-browser": "^3.0.4",
