--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"barrel": "barrelsby -E -D -d ./components",
 		"barrel:watch": "chokidar './components/**/*.tsx' -c 'npm run --silent barrel'",
 		"postbuild": "next-sitemap",
-		"reset": "rm -rf .next node_modules pnpm-lock.yaml ; pnpm i"
+		"reset": "rm -rf .next node_modules pnpm-lock.yaml ; pnpm i",
+		"update-utils": "pnpm up github:bebejane/next-dato-util && git add . && git commit -m \"updates\" && git push"
 	},
 	"dependencies": {
 		"@datocms/cma-client-browser": "^3.0.4",
