next-dato-utils up

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"barrel:watch": "chokidar './components/**/*.tsx' -c 'npm run --silent barrel'",
 		"postbuild": "next-sitemap",
 		"reset": "rm -rf .next node_modules pnpm-lock.yaml ; pnpm i",
-		"update-utils": "pnpm up github:bebejane/next-dato-util && git add . && git commit -m \"updates\" && git push"
+		"update-utils": "pnpm up github:bebejane/next-dato-util && git add . && git commit -m \"next-dato-utils up\" && git push"
 	},
 	"dependencies": {
 		"@datocms/cma-client-browser": "^3.0.4",
