--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"datocms-structured-text-utils": "^2.0.4",
 		"dotenv": "^16.3.1",
 		"graphql": "^16.8.1",
-		"next": "^14.0.2",
+		"next": "14.0.3-canary.7",
 		"next-dato-utils": "github:bebejane/next-dato-utils",
 		"next-seo": "^5.15.0",
 		"next-sitemap": "^3.1.55",
