--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "next dev & npm run barrel:watch & npm run codegen",
 		"build": "npm run clear:cache && next build && npm run postbuild",
-		"clear:cache": "rm -rf .next/cache/fetch-cache",
+		"clear:cache": "rm -rf .next/cache",
 		"codegen": "graphql-codegen --watch",
 		"start": "next start",
 		"lint": "next lint",
