--- a/package.json
+++ b/package.json
@@ -21,16 +21,19 @@
 		"@datocms/cma-client-node": "^3.0.4",
 		"@graphql-typed-document-node/core": "^3.2.0",
 		"@next/env": "^13.5.6",
+		"@types/is-integer": "^1.0.2",
 		"classnames": "^2.3.2",
 		"date-fns": "^2.30.0",
 		"datocms-structured-text-utils": "^2.0.4",
 		"dotenv": "^16.3.1",
 		"graphql": "^16.8.1",
+		"is-integer": "^1.0.7",
 		"next": "14.0.3-canary.7",
 		"next-dato-utils": "github:bebejane/next-dato-utils",
 		"next-seo": "^5.15.0",
 		"next-sitemap": "^3.1.55",
 		"nextjs-google-analytics": "^2.3.3",
+		"object-traversal": "^1.0.1",
 		"react": "^18.2.0",
 		"react-datocms": "^4.1.3",
 		"react-dom": "^18.2.0",
