--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"dotenv": "^16.3.1",
 		"graphql": "^16.8.1",
 		"is-integer": "^1.0.7",
-		"next": "14.0.3",
+		"next": "14.0.4-canary.3",
 		"next-dato-utils": "github:bebejane/next-dato-utils",
 		"next-seo": "^5.15.0",
 		"next-sitemap": "^3.1.55",
