--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev & npm run barrel:watch & npm run codegen",
-		"build": "next build && npm run postbuild",
+		"build": "rm -rf ./.next/cache/fetch-cache && next build && npm run postbuild",
 		"clear:cache": "rm -rf .next/cache",
 		"codegen": "graphql-codegen --watch",
 		"start": "next start",
