--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
 		"next-sitemap": "^3.1.55",
 		"nextjs-google-analytics": "^2.3.3",
 		"object-traversal": "^1.0.1",
-		"react": "^18.2.0",
+		"react": "18.3.0-canary-bbb9cb116-20231117",
 		"react-datocms": "^4.1.3",
-		"react-dom": "^18.2.0",
+		"react-dom": "18.3.0-canary-bbb9cb116-20231117",
 		"react-icons": "^4.11.0",
 		"rooks": "^7.14.1",
 		"sass": "^1.69.5",
