--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
 		{
 			"path": "/api/backup?max=3",
 			"schedule": "0 22 * * *"
+		},
+		{
+			"path": "/api/cron-test",
+			"schedule": "*/1 * * * *"
 		}
 	]
 }
