--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/is-integer": "^1.0.2",
     "classnames": "^2.5.1",
     "date-fns": "^2.30.0",
+    "dato-nextjs-utils": "github:bebejane/dato-nextjs-utils",
     "datocms-structured-text-utils": "^4.0.0",
     "dotenv": "^16.4.5",
     "graphql": "^16.8.1",
