--- a/package.json
+++ b/package.json
@@ -1,67 +1,66 @@
 {
-  "name": "nextjs-dato-boiler",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbo & npm run codegen",
-    "build": "next build && npm run postbuild",
-    "clear": "rm -rf ./node_modules && rm -rf .next && pnpm i",
-    "clear:cache": "rm -rf .next/cache",
-    "codegen": "graphql-codegen --watch",
-    "start": "next start",
-    "lint": "next lint",
-    "preview": "npm run build && npm run start",
-    "postbuild": "next-sitemap",
-    "reset": "rm -rf .next node_modules pnpm-lock.yaml ; pnpm i",
-    "update-utils": "pnpm up github:bebejane/next-dato-util && git add . && git commit -m \"next-dato-utils up\" && git push"
-  },
-  "dependencies": {
-    "@datocms/cma-client-browser": "^3.3.12",
-    "@datocms/cma-client-node": "^3.3.12",
-    "@graphql-typed-document-node/core": "^3.2.0",
-    "@next/env": "^15.0.1",
-    "@types/is-integer": "^1.0.2",
-    "classnames": "^2.5.1",
-    "date-fns": "^2.30.0",
-    "dato-nextjs-utils": "github:bebejane/dato-nextjs-utils",
-    "datocms-structured-text-utils": "^4.0.1",
-    "dotenv": "^16.4.5",
-    "graphql": "^16.8.1",
-    "is-integer": "^1.0.7",
-    "next": "15.0.1",
-    "next-dato-utils": "github:bebejane/next-dato-utils",
-    "next-seo": "^5.15.0",
-    "next-sitemap": "^3.1.55",
-    "nextjs-google-analytics": "^2.3.7",
-    "object-traversal": "^1.0.1",
-    "react": "18.3.0-canary-bbb9cb116-20231117",
-    "react-datocms": "^8.0.0-1",
-    "react-dom": "18.3.0-canary-bbb9cb116-20231117",
-    "react-icons": "^5.3.0",
-    "rooks": "^7.14.1",
-    "sass": "^1.80.4",
-    "swiper": "^11.1.14",
-    "zod": "^3.22.4",
-    "zustand": "^5.0.0"
-  },
-  "devDependencies": {
-    "@graphql-codegen/cli": "^5.0.3",
-    "@graphql-codegen/import-types-preset": "^3.0.0",
-    "@graphql-codegen/introspection": "^4.0.3",
-    "@graphql-codegen/typed-document-node": "^5.0.1",
-    "@graphql-codegen/typescript": "^4.0.1",
-    "@graphql-codegen/typescript-document-nodes": "^4.0.1",
-    "@graphql-codegen/typescript-graphql-files-modules": "^3.0.0",
-    "@graphql-codegen/typescript-operations": "^4.0.1",
-    "@graphql-codegen/typescript-resolvers": "^2.7.13",
-    "@parcel/watcher": "^2.4.1",
-    "@types/node": "^22.8.1",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "chokidar-cli": "^3.0.0",
-    "eslint": "^8.53.0",
-    "eslint-config-next": "^12.3.4",
-    "graphql-config": "^5.0.3",
-    "tsx": "^4.10.5"
-  }
+	"name": "nextjs-dato-boiler",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbo & npm run codegen",
+		"build": "next build && npm run postbuild",
+		"clear": "rm -rf ./node_modules && rm -rf .next && pnpm i",
+		"clear:cache": "rm -rf .next/cache",
+		"codegen": "graphql-codegen --watch",
+		"start": "next start",
+		"lint": "next lint",
+		"preview": "npm run build && npm run start",
+		"postbuild": "next-sitemap",
+		"reset": "rm -rf .next node_modules pnpm-lock.yaml ; pnpm i",
+		"update-utils": "pnpm up github:bebejane/next-dato-util && git add . && git commit -m \"next-dato-utils up\" && git push"
+	},
+	"dependencies": {
+		"@datocms/cma-client-browser": "^3.3.12",
+		"@datocms/cma-client-node": "^3.3.12",
+		"@graphql-typed-document-node/core": "^3.2.0",
+		"@next/env": "^15.0.1",
+		"@types/is-integer": "^1.0.2",
+		"classnames": "^2.5.1",
+		"date-fns": "^2.30.0",
+		"datocms-structured-text-utils": "^4.0.1",
+		"dotenv": "^16.4.5",
+		"graphql": "^16.8.1",
+		"is-integer": "^1.0.7",
+		"next": "15.0.1",
+		"next-dato-utils": "github:bebejane/next-dato-utils#next15",
+		"next-seo": "^5.15.0",
+		"next-sitemap": "^3.1.55",
+		"nextjs-google-analytics": "^2.3.7",
+		"object-traversal": "^1.0.1",
+		"react": "18.3.0-canary-bbb9cb116-20231117",
+		"react-datocms": "^8.0.0-1",
+		"react-dom": "18.3.0-canary-bbb9cb116-20231117",
+		"react-icons": "^5.3.0",
+		"rooks": "^7.14.1",
+		"sass": "^1.80.4",
+		"swiper": "^11.1.14",
+		"zod": "^3.22.4",
+		"zustand": "^5.0.0"
+	},
+	"devDependencies": {
+		"@graphql-codegen/cli": "^5.0.3",
+		"@graphql-codegen/import-types-preset": "^3.0.0",
+		"@graphql-codegen/introspection": "^4.0.3",
+		"@graphql-codegen/typed-document-node": "^5.0.1",
+		"@graphql-codegen/typescript": "^4.0.1",
+		"@graphql-codegen/typescript-document-nodes": "^4.0.1",
+		"@graphql-codegen/typescript-graphql-files-modules": "^3.0.0",
+		"@graphql-codegen/typescript-operations": "^4.0.1",
+		"@graphql-codegen/typescript-resolvers": "^2.7.13",
+		"@parcel/watcher": "^2.4.1",
+		"@types/node": "^22.8.1",
+		"@types/react": "^18.3.12",
+		"@types/react-dom": "^18.3.1",
+		"chokidar-cli": "^3.0.0",
+		"eslint": "^8.53.0",
+		"eslint-config-next": "^12.3.4",
+		"graphql-config": "^5.0.3",
+		"tsx": "^4.10.5"
+	}
 }
