--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
 		"react-dom": "18.3.0-canary-bbb9cb116-20231117",
 		"react-icons": "^5.3.0",
 		"rooks": "^7.14.1",
-		"sass": "^1.80.4",
+		"sass": "1.80.4",
 		"swiper": "^11.1.14",
 		"zod": "^3.22.4",
 		"zustand": "^5.0.0"
