--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "node_modules": true,
     ".vscode": true,
     ".next": true,
-    "@types": true
+    "@types": true,
+    ".vercel": true
   }
 }
