--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "nextjs-dato-boiler",
+	"name": "next-dato-boiler",
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
@@ -16,51 +16,49 @@
 		"update-utils": "pnpm up github:bebejane/next-dato-util && git add . && git commit -m \"next-dato-utils up\" && git push"
 	},
 	"dependencies": {
-		"@datocms/cma-client-browser": "^3.3.12",
-		"@datocms/cma-client-node": "^3.3.12",
+		"@datocms/cma-client-browser": "^4.0.1",
+		"@datocms/cma-client-node": "^4.0.1",
 		"@graphql-typed-document-node/core": "^3.2.0",
-		"@next/env": "^15.0.1",
+		"@next/env": "^15.3.0",
 		"@types/is-integer": "^1.0.2",
 		"classnames": "^2.5.1",
 		"date-fns": "^2.30.0",
-		"datocms-structured-text-utils": "^4.0.1",
-		"dotenv": "^16.4.5",
-		"graphql": "^16.9.0",
+		"datocms-structured-text-utils": "^5.0.0",
+		"dotenv": "^16.5.0",
+		"graphql": "^16.10.0",
 		"is-integer": "^1.0.7",
-		"next": "15.0.1",
+		"next": "15.3.0",
 		"next-dato-utils": "github:bebejane/next-dato-utils#next15",
 		"next-seo": "^5.15.0",
-		"next-sitemap": "^3.1.55",
-		"nextjs-google-analytics": "^2.3.7",
 		"object-traversal": "^1.0.1",
 		"react": "18.3.0-canary-bbb9cb116-20231117",
-		"react-datocms": "^8.0.0-1",
+		"react-datocms": "8.0.0-1",
 		"react-dom": "18.3.0-canary-bbb9cb116-20231117",
-		"react-icons": "^5.3.0",
+		"react-icons": "^5.5.0",
 		"rooks": "^7.14.1",
 		"sass": "1.80.4",
-		"swiper": "^11.1.14",
-		"zod": "^3.22.4",
-		"zustand": "^5.0.0"
+		"swiper": "^11.2.6",
+		"zod": "^3.24.2",
+		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
-		"@graphql-codegen/cli": "^5.0.3",
+		"@graphql-codegen/cli": "^5.0.5",
 		"@graphql-codegen/import-types-preset": "^3.0.0",
 		"@graphql-codegen/introspection": "^4.0.3",
-		"@graphql-codegen/typed-document-node": "^5.0.1",
-		"@graphql-codegen/typescript": "^4.1.0",
-		"@graphql-codegen/typescript-document-nodes": "^4.0.1",
+		"@graphql-codegen/typed-document-node": "^5.1.1",
+		"@graphql-codegen/typescript": "^4.1.6",
+		"@graphql-codegen/typescript-document-nodes": "^4.0.16",
 		"@graphql-codegen/typescript-graphql-files-modules": "^3.0.0",
-		"@graphql-codegen/typescript-operations": "^4.0.1",
+		"@graphql-codegen/typescript-operations": "^4.6.0",
 		"@graphql-codegen/typescript-resolvers": "^2.7.13",
-		"@parcel/watcher": "^2.4.1",
-		"@types/node": "^22.8.1",
-		"@types/react": "^18.3.12",
-		"@types/react-dom": "^18.3.1",
+		"@parcel/watcher": "^2.5.1",
+		"@types/node": "^22.14.1",
+		"@types/react": "^18.3.20",
+		"@types/react-dom": "^18.3.6",
 		"chokidar-cli": "^3.0.0",
-		"eslint": "^9.13.0",
-		"eslint-config-next": "^12.3.4",
+		"eslint": "^9.24.0",
+		"eslint-config-next": "^12.3.7",
 		"graphql-config": "^5.1.3",
-		"tsx": "^4.19.1"
+		"tsx": "^4.19.3"
 	}
 }
