--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev --turbo & npm run codegen",
-		"build": "next build && npm run postbuild",
+		"build": "next build",
 		"clear": "rm -rf ./node_modules && rm -rf .next && pnpm i",
 		"clear:cache": "rm -rf .next/cache",
 		"codegen": "graphql-codegen --watch",
 		"start": "next start",
 		"lint": "next lint",
 		"preview": "npm run build && npm run start",
-		"postbuild": "next-sitemap",
 		"reset": "rm -rf .next node_modules pnpm-lock.yaml ; pnpm i",
 		"update-utils": "pnpm up github:bebejane/next-dato-util && git add . && git commit -m \"next-dato-utils up\" && git push"
 	},
@@ -29,7 +28,7 @@
 		"is-integer": "^1.0.7",
 		"next": "15.3.0",
 		"next-dato-utils": "github:bebejane/next-dato-utils#next15",
-		"next-seo": "^5.15.0",
+		"next-intl": "^4.0.2",
 		"object-traversal": "^1.0.1",
 		"react": "18.3.0-canary-bbb9cb116-20231117",
 		"react-datocms": "8.0.0-1",
