--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-icons": "^5.5.0",
     "rooks": "^7.14.1",
     "sass": "1.80.4",
+    "source-map-support": "^0.5.21",
     "swiper": "^11.2.6",
     "zod": "^3.24.2",
     "zustand": "^5.0.3"
