--- a/package.json
+++ b/package.json
@@ -25,17 +25,15 @@
     "datocms-structured-text-utils": "^5.0.0",
     "dotenv": "^16.5.0",
     "graphql": "^16.10.0",
-    "is-integer": "^1.0.7",
     "next": "15.3.0",
     "next-auth": "^4.24.11",
     "next-dato-utils": "github:bebejane/next-dato-utils#next15",
     "next-intl": "^4.0.3",
-    "object-traversal": "^1.0.1",
     "react": "18.3.0-canary-bbb9cb116-20231117",
     "react-datocms": "8.0.0-1",
     "react-dom": "18.3.0-canary-bbb9cb116-20231117",
     "react-icons": "^5.5.0",
-    "rooks": "^7.14.1",
+    "react-use": "^17.6.0",
     "sass": "1.80.4",
     "source-map-support": "^0.5.21",
     "swiper": "^11.2.6",
@@ -58,8 +56,7 @@
     "@types/react-dom": "^18.3.6",
     "chokidar-cli": "^3.0.0",
     "eslint": "^9.24.0",
-    "eslint-config-next": "^12.3.7",
-    "graphql-config": "^5.1.3",
-    "tsx": "^4.19.3"
+    "eslint-config-next": "^15.3.1",
+    "graphql-config": "^5.1.3"
   }
 }
