--- a/package.json
+++ b/package.json
@@ -1,62 +1,54 @@
 {
-  "name": "next-dato-boiler",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbo & npm run codegen",
-    "build": "next build",
-    "clear": "rm -rf ./node_modules && rm -rf .next && pnpm i",
-    "clear:cache": "rm -rf .next/cache",
-    "codegen": "graphql-codegen --watch",
-    "start": "next start",
-    "lint": "next lint",
-    "preview": "npm run build && npm run start",
-    "reset": "rm -rf .next node_modules pnpm-lock.yaml ; pnpm i",
-    "update-utils": "pnpm up github:bebejane/next-dato-util && git add . && git commit -m \"next-dato-utils up\" && git push"
-  },
-  "dependencies": {
-    "@datocms/cma-client-browser": "^4.0.1",
-    "@datocms/cma-client-node": "^4.0.1",
-    "@graphql-typed-document-node/core": "^3.2.0",
-    "@next/env": "^15.3.0",
-    "@types/is-integer": "^1.0.2",
-    "classnames": "^2.5.1",
-    "date-fns": "^2.30.0",
-    "datocms-structured-text-utils": "^5.0.0",
-    "dotenv": "^16.5.0",
-    "graphql": "^16.10.0",
-    "next": "15.3.0",
-    "next-auth": "^4.24.11",
-    "next-dato-utils": "github:bebejane/next-dato-utils#next15",
-    "next-intl": "^4.0.3",
-    "react": "18.3.0-canary-bbb9cb116-20231117",
-    "react-datocms": "8.0.0-1",
-    "react-dom": "18.3.0-canary-bbb9cb116-20231117",
-    "react-icons": "^5.5.0",
-    "react-use": "^17.6.0",
-    "sass": "1.80.4",
-    "source-map-support": "^0.5.21",
-    "swiper": "^11.2.6",
-    "zod": "^3.24.2",
-    "zustand": "^5.0.3"
-  },
-  "devDependencies": {
-    "@graphql-codegen/cli": "^5.0.5",
-    "@graphql-codegen/import-types-preset": "^3.0.0",
-    "@graphql-codegen/introspection": "^4.0.3",
-    "@graphql-codegen/typed-document-node": "^5.1.1",
-    "@graphql-codegen/typescript": "^4.1.6",
-    "@graphql-codegen/typescript-document-nodes": "^4.0.16",
-    "@graphql-codegen/typescript-graphql-files-modules": "^3.0.0",
-    "@graphql-codegen/typescript-operations": "^4.6.0",
-    "@graphql-codegen/typescript-resolvers": "^2.7.13",
-    "@parcel/watcher": "^2.5.1",
-    "@types/node": "^22.14.1",
-    "@types/react": "^18.3.20",
-    "@types/react-dom": "^18.3.6",
-    "chokidar-cli": "^3.0.0",
-    "eslint": "^9.24.0",
-    "eslint-config-next": "^15.3.1",
-    "graphql-config": "^5.1.3"
-  }
+	"name": "next-dato-boiler",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev & npm run codegen",
+		"dev:turbo": "next dev --turbo & npm run codegen",
+		"start": "next start",
+		"preview": "npm run build && npm run start",
+		"build": "next build",
+		"clean": "rm -rf ./node_modules && rm -rf .next && pnpm i",
+		"clean:cache": "rm -rf .next/cache",
+		"codegen": "graphql-codegen --watch",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@datocms/cma-client": "^5.1.24",
+		"@datocms/cma-client-browser": "^5.1.24",
+		"@datocms/cma-client-node": "^5.1.24",
+		"@graphql-typed-document-node/core": "^3.2.0",
+		"@next/env": "^16.0.0",
+		"classnames": "^2.5.1",
+		"date-fns": "^4.1.0",
+		"datocms-structured-text-utils": "^5.1.6",
+		"dotenv": "^17.2.3",
+		"graphql": "^16.11.0",
+		"next": "15.5.6",
+		"next-auth": "^4.24.12",
+		"next-dato-utils": "github:bebejane/next-dato-utils",
+		"next-intl": "^4.4.0",
+		"react-datocms": "8.0.0-1",
+		"react-use": "^17.6.0",
+		"sass": "1.93.2",
+		"swiper": "^11.2.10",
+		"zod": "^4.1.12",
+		"zustand": "^5.0.8"
+	},
+	"devDependencies": {
+		"@graphql-codegen/cli": "^6.0.1",
+		"@graphql-codegen/import-types-preset": "^3.0.1",
+		"@graphql-codegen/introspection": "^5.0.0",
+		"@graphql-codegen/typed-document-node": "^6.0.2",
+		"@graphql-codegen/typescript": "^5.0.2",
+		"@graphql-codegen/typescript-document-nodes": "^5.0.2",
+		"@graphql-codegen/typescript-graphql-files-modules": "^3.0.1",
+		"@graphql-codegen/typescript-operations": "^5.0.2",
+		"@graphql-codegen/typescript-resolvers": "^5.1.0",
+		"@parcel/watcher": "^2.5.1",
+		"@types/node": "^24.9.1",
+		"eslint": "^9.38.0",
+		"eslint-config-next": "^16.0.0",
+		"graphql-config": "^5.1.5"
+	}
 }
