--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
   "files.exclude": {
-    "node_modules": false,
-    ".vscode": false,
-    "types": false,
-    ".vercel": false,
-    ".next": false
+    "node_modules": true,
+    ".vscode": true,
+    "types": true,
+    ".vercel": true,
+    ".next": true
   }
 }
