--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"start": "next start",
 		"preview": "npm run build && npm run start",
 		"build": "next build",
+		"dev:email": "PORT=4000 email dev",
 		"codegen": "graphql-codegen --watch",
 		"codegen:datocms": "datocms schema:generate ./types/datocms-cma.ts",
 		"lint": "next lint",
@@ -18,6 +19,7 @@
 		"@datocms/cma-client-browser": "^5.1.24",
 		"@datocms/cma-client-node": "^5.1.24",
 		"@graphql-typed-document-node/core": "^3.2.0",
+		"@react-email/components": "1.0.0",
 		"change-case": "^5.4.4",
 		"classnames": "^2.5.1",
 		"datocms-structured-text-utils": "^5.1.6",
@@ -28,6 +30,7 @@
 		"next-dato-utils": "github:bebejane/next-dato-utils#latest",
 		"next-intl": "^4.4.0",
 		"nuqs": "^2.7.2",
+		"postmark": "^4.0.5",
 		"react": "19.1.0",
 		"react-datocms": "8.0.0-1",
 		"react-dom": "19.1.0",
@@ -44,10 +47,12 @@
 		"@graphql-codegen/typescript-graphql-files-modules": "^3.0.1",
 		"@graphql-codegen/typescript-operations": "^5.0.2",
 		"@parcel/watcher": "^2.5.1",
+		"@react-email/preview-server": "5.0.1",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"graphql-config": "^5.1.5",
+		"react-email": "5.0.1",
 		"typescript": "^5"
 	}
 }
