--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
 		"@datocms/cma-client-browser": "^5.1.24",
 		"@datocms/cma-client-node": "^5.1.24",
 		"@graphql-typed-document-node/core": "^3.2.0",
+		"@libsql/client": "^0.15.15",
 		"@react-email/components": "1.0.0",
+		"better-auth": "^1.3.34",
 		"change-case": "^5.4.4",
 		"classnames": "^2.5.1",
 		"datocms-structured-text-utils": "^5.1.6",
 		"dotenv": "^17.2.3",
+		"drizzle-orm": "^0.44.7",
 		"graphql": "^16.11.0",
 		"next": "15.5.6",
-		"next-auth": "5.0.0-beta.30",
 		"next-dato-utils": "github:bebejane/next-dato-utils#latest",
 		"next-intl": "^4.4.0",
 		"nuqs": "^2.7.2",
@@ -52,6 +54,7 @@
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
+		"drizzle-kit": "^0.31.6",
 		"graphql-config": "^5.1.5",
 		"react-email": "5.0.1",
 		"typescript": "^5"
