--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
 		"drizzle-orm": "^0.44.7",
 		"graphql": "^16.11.0",
 		"next": "15.5.6",
-		"next-dato-utils": "github:bebejane/next-dato-utils#latest",
+		"next-dato-utils": "github:bebejane/next-dato-utils#v2.0.82",
 		"next-intl": "^4.4.0",
 		"nuqs": "^2.7.2",
 		"postmark": "^4.0.5",
