--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "reset:cache": "rm -rf .next/cache"
   },
   "dependencies": {
-    "@auth/core": "^0.34.3",
-    "@datocms/cma-client": "^5.1.29",
-    "@datocms/cma-client-browser": "^5.1.29",
-    "@datocms/cma-client-node": "^5.1.29",
+    "@base-ui-components/react": "1.0.0-rc.0",
+    "@datocms/cma-client": "^5.2.0",
+    "@datocms/cma-client-browser": "^5.2.0",
+    "@datocms/cma-client-node": "^5.2.0",
     "@graphql-typed-document-node/core": "^3.2.0",
     "@libsql/client": "^0.15.15",
-    "@react-email/components": "1.0.0",
-    "better-auth": "^1.4.3",
+    "@react-email/components": "1.0.1",
+    "better-auth": "^1.4.5",
     "change-case": "^5.4.4",
     "classnames": "^2.5.1",
     "datocms-structured-text-utils": "^5.1.6",
@@ -31,30 +31,30 @@
     "graphql": "^16.12.0",
     "next": "15.5.7",
     "next-dato-utils": "github:bebejane/next-dato-utils#v2.0.82",
-    "next-intl": "^4.5.6",
-    "nuqs": "^2.8.1",
+    "next-intl": "^4.5.8",
+    "nuqs": "^2.8.2",
     "postmark": "^4.0.5",
-    "react": "19.1.0",
+    "react": "19.2.1",
     "react-datocms": "8.0.0-1",
-    "react-dom": "19.1.0",
+    "react-dom": "19.2.1",
     "react-wrap-balancer": "^1.1.1",
     "sass": "1.93.2",
     "zod": "^4.1.13",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^6.1.0",
-    "@graphql-codegen/typed-document-node": "^6.0.2",
-    "@graphql-codegen/typescript": "^5.0.5",
-    "@graphql-codegen/typescript-document-nodes": "^5.0.2",
+    "@graphql-codegen/typed-document-node": "^6.1.4",
+    "@graphql-codegen/typescript": "^5.0.6",
+    "@graphql-codegen/typescript-document-nodes": "^5.0.6",
     "@graphql-codegen/typescript-graphql-files-modules": "^3.0.1",
-    "@graphql-codegen/typescript-operations": "^5.0.2",
+    "@graphql-codegen/typescript-operations": "^5.0.6",
     "@parcel/watcher": "^2.5.1",
     "@react-email/preview-server": "5.0.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "drizzle-kit": "^0.31.7",
+    "drizzle-kit": "^0.31.8",
     "graphql-config": "^5.1.5",
     "react-email": "5.0.1",
     "typescript": "^5"
